--- a/MauiBlazor/Pages/Poker/Voting.razor
+++ b/MauiBlazor/Pages/Poker/Voting.razor
@@ -1,7 +1,7 @@
 ﻿@using MauiBlazor.Pages.Poker.FibonacciStyle
 @using _SharedSignalR.Models;
 <span>@(
-      Feature.Feature ?? "Waiting..."
+      Feature.Title ?? "Waiting..."
       )</span>
 
 <span>Answer: </span>
