--- a/MauiBlazor/Pages/Poker/PokerClient.razor
+++ b/MauiBlazor/Pages/Poker/PokerClient.razor
@@ -1,4 +1,4 @@
-﻿@page "/joinroom"
+﻿@*@page "/joinroom"
 @using MauiBlazor.SignalR;
 @using _SharedSignalR.Models;
 @implements IDisposable;
@@ -81,4 +81,4 @@
 		foreach (var dispose in disposables)
 			dispose.Dispose();
 	}
-}
+}*@
