--- a/MauiBlazor/Pages/General/Leader.razor
+++ b/MauiBlazor/Pages/General/Leader.razor
@@ -1,9 +1,9 @@
-﻿@inject ISignalrContext signalR
+﻿@using MauiBlazor.SignalR;
+@inject ISignalrContext signalR
 <div>
 
 </div>
 
 @code {
-	private SignalrContextSettings 
 
 }
