--- a/MauiBlazor/Pages/Poker/ClientResultsView.razor
+++ b/MauiBlazor/Pages/Poker/ClientResultsView.razor
@@ -1,5 +1,43 @@
-﻿<h3>ClientResultsView</h3>
+﻿@inject ISignalrContext signalr;
+@using MauiBlazor.SignalR;
+@using _SharedSignalR.Models;
+<h3>ClientResultsView</h3>
+
+<table>
+    <tr>
+        <th>Name</th>
+        <th>Vote</th>
+    </tr>
+    @foreach (var result in results.Votes)
+    {
+        <tr>
+            <td>@result.Username</td>
+            <td>@result.Answer</td>
+        </tr>
+    }
+</table>
 
 @code {
+    [Parameter]
+    public PokerVoteResults Results { get; set; }
+    PokerVoteResults results;
+    List<IDisposable> disposables = new();
+
+    protected override async Task OnInitializedAsync()
+    {
+        results = Results;
+
+        disposables.AddRange(new[] {
+            signalr.OnPokerResults(OnPokerResults)
+        });
+
+        await signalr.Start();
+    }
+
+    async void OnPokerResults(PokerVoteResults results)
+    {
+        this.results = results;
+        await InvokeAsync(StateHasChanged);
+    }
 
 }
