--- a/MauiBlazor/Pages/PokerPlanning/LeaderPokerResultAwait.razor
+++ b/MauiBlazor/Pages/PokerPlanning/LeaderPokerResultAwait.razor
@@ -3,6 +3,7 @@
 @implements IDisposable;
 
 @*-----------------------------------------------------------------------------------------*@
+<button @onclick="()=>PokerNavChanged.InvokeAsync(Pages.LeaderPokerSelectStyle)">Close Vote</button>
 <h3>Room: @signalR.Settings.Room</h3>
 <h1>Votes:</h1>
 @if (votes.Count == 0)
@@ -11,11 +12,12 @@
 }
 else
 {
-	@foreach (var vote in votes)
+	@foreach (var vote in votes.OrderBy(x => x.Answer))
 	{
 		<p>@vote.Username voted @vote.Answer</p>
 	}
 }
+
 
 @*-----------------------------------------------------------------------------------------*@
 @code {
@@ -24,15 +26,16 @@ else
 	[Parameter]
 	public EventCallback<Pages> PokerNavChanged { get; set; }
 
-	private List<PokerVote> votes = new();
+	private List<PokerVote> votes;
 	private List<IDisposable> disposables = new();
 
 	protected override void OnInitialized()
 	{
+		votes = new();
 		disposables.AddRange(new[]
 		{
 			signalR.OnPokerVote(OnPokerVote)
-	});
+		});
 	}
 
 	private async void OnPokerVote(PokerVote vote)
