can now select diffrent planning poker styles, client submit vote button disabled if no answer is selected

--- a/MauiBlazor/Pages/PokerPlanning/ClientResultsView.razor
+++ b/MauiBlazor/Pages/PokerPlanning/ClientResultsView.razor
@@ -11,8 +11,8 @@
 @foreach (var result in results.Votes)
 {
     <tr>
-        <td>result.Username</td>
-        <td>result.Answer</td>
+        <td>@result.Username</td>
+        <td>@result.Answer</td>
     </tr>
 }
 </table>
