--- a/MauiBlazor/Pages/PokerPlanning/LeaderPokerSelectStyle.razor.css
+++ b/MauiBlazor/Pages/PokerPlanning/LeaderPokerSelectStyle.razor.css
@@ -2,3 +2,21 @@
     display: flex;
     flex-direction: row;
 }
+
+.style-select-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    box-sizing: border-box;
+}
+
+.selected {
+    border: 5px solid red;
+}
+.style-select-btn {
+    all: unset;
+    cursor: pointer;
+    padding: 10px;
+}
+img{
+    padding: 5px;
+}
