Button and inputs

--- a/MauiBlazor/Shared/MainLayout.razor
+++ b/MauiBlazor/Shared/MainLayout.razor
@@ -5,25 +5,18 @@
     <main>
         <div class="app-container">
             <div class="header">
-                <a href="index.html">
-                    <img src="arrow-back.png" class="header-item item1" />
-                </a>
-                <div class="header-item item2"></div>
+                <div class="header-item item1">
+                    <img src="arrow-back.png" />
+                </div>
                 <div class="header-item appname">
-                    5 Dimensions of Agile
+                    Agile Toolbox
+                </div>
+                <div class="header-item item2">
+                    <img src="bars-solid.svg" />
                 </div>
             </div>
             <div class="main">
-
-            @Body
-
-            </div>
-            <div class="footer">
-                <div class="header-item elicit">
-                    Elicit
-                </div>
-                <div class="header-item item2"></div>
-                <div class="header-item item1"></div>
+                @Body
             </div>
         </div>
     </main>
