--- a/MauiBlazor/Pages/General/JoinRoom.razor
+++ b/MauiBlazor/Pages/General/JoinRoom.razor
@@ -1,18 +1,33 @@
 ﻿@using _SharedSignalR.Models;
-<input @bind="settings.Username" placeholder="Your name" /><br />
-<input @bind="settings.Room" placeholder="Room name" /><br />
-<a @onclick="OnSubmit">Join</a>
+<span></span>
+<div>
+    <input type="text" @bind="@username" placeholder="Your name" />
+    <input type="text" @oninput="onButtonChange" placeholder="Room name" />
+</div>
+
+<button disabled=@buttonDisabled @onclick="OnSubmit">Join</button>
 
 @code {
     UserSettings settings = new();
     public string roomname = "";
     public string username = "";
+    bool buttonDisabled = true;
 
     [Parameter]
     public EventCallback<UserSettings> OnSubmitted { get; set; }
 
+    void onButtonChange(ChangeEventArgs args)
+    {
+        roomname = args.Value.ToString();
+
+        buttonDisabled = roomname == "";
+        StateHasChanged();
+    }
+
     public async Task OnSubmit()
     {
+        settings.Room = roomname;
+        settings.Username = username;
         await OnSubmitted.InvokeAsync(settings);
     }
 
